--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -1,3 +1,23 @@
-<header>
-	Soy Header.
+<header th:fragment="header">
+	<nav class="navbar navbar-expand-lg bg-body-tertiary bg-primary" data-bs-theme="dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Catálogo CF</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/home">Catálogo</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pelicula">Nueva Pelicula</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/listado">Administrar</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 </header>
