--- a/src/main/resources/templates/pelicula.html
+++ b/src/main/resources/templates/pelicula.html
@@ -1,9 +1,49 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:insert="layouts/head">
+<head th:insert="~{layouts/head :: head}">
 
 </head>
 <body>
-	<header th:insert="layouts/header"></header>
+	<header th:insert="~{layouts/header :: header}"></header>
+	
+	<div class="container">		
+		<form th:action="@{/pelicula}" th:object="${pelicula}" method="post" class="col-md-8 offset-md-2">
+			<h2 th:text="${titulo}" class="py-4"></h2>
+			<div class="row mb-3">
+				<label for="inputNombre" class="col-sm-2 col-form-label">Nombre</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="inputNombre" th:field="*{nombre}">
+				</div>
+			</div>
+			<div class="row mb-3">
+				<label for="fecha_estreno" class="col-sm-2 col-form-label">Fecha de Estreno</label>
+				<div class="col-sm-10">
+					<input type="date" class="form-control" id="fecha_estreno" th:field="*{fechaEstreno}">
+				</div>
+			</div>
+			<div class="row mb-3">
+				<label for="fecha_estreno" class="col-sm-2 col-form-label">Género</label>
+				<div class="col-sm-10">
+					<select class="form-select" th:field="*{genero}">
+						<option th:each="genero : ${generos}" th:text="${genero.nombre}" th:value="${genero.id}"></option>
+					</select>
+				</div>
+			</div>
+			<div class="row mb-3">
+				<label for="protagonistas" class="col-sm-2 col-form-label">Género</label>
+				<div class="col-sm-10">
+					<select class="form-select" th:field="*{protagonistas}" onchange="actorSelected(this)">
+						<option th:text="'Seleccionar actor'" th:value="0"></option>
+						<option th:each="actor : ${actores}" th:text="${actor.nombre}" th:value="${actor.id}" th:data-url="${actor.urlImagen}"></option>
+					</select>
+				</div>
+			</div>
+			<input id="ids" name="ids" type="hidden">
+			<div id="protagonistas_container" class="row">
+				
+			</div>
+		  	<button type="submit" class="btn btn-primary float-end">Guardar</button>
+		</form>
+	</div>
 </body>
 </html>
